[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "acevision"
version = "0.1.0"
description = "Reveal the exact ACEs behind Active Directory control relationships."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Judith Mader (xpl0itnik)" }]
requires-python = ">=3.8"
dependencies = ["ldap3>=2.9", "impacket>=0.11.0"]

[project.urls]
Homepage = "https://github.com/xploitnik/ACEVision"
Issues = "https://github.com/xploitnik/ACEVision/issues"

[project.scripts]
acevision = "certipy_tool.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["certipy_tool*"]


